--- a/cimertan.html
+++ b/cimertan.html
@@ -24,7 +24,7 @@
 <p>A címer olyan, általában pajzson viselt, meghatározott szabályok szerint megszerkesztett színes jelvény, melyet egy család, intézmény vagy testület a saját maga azonosítására örökletes, állandó jelleggel használ.</p>
 
 
-<img src="teljescimer.png" id="teljes" alt="Teljes címer részei" title="Teljes címer részei">
+<img src="IMG/teljescimer.png" id="teljes" alt="Teljes címer részei" title="Teljes címer részei">
 
 <h2>A címer összetevői</h2> 
     <p>
@@ -52,7 +52,7 @@
 <p>A heraldikában rendkívül gyakori az oroszlán és a sas. Sokszor további megkülönböztető jegyekkel is rendelkeznek, mint például lépő, ülő, ugró, ágaskodó, visszanéző stb. oroszlán és más négylábú állatok. Az állatok eltérően színezett csőrét, karmait, patáját, agyarait, fogait, esetleg uszonyait, sörényét, farokvégét stb. a címerleírásban fegyverzetnek nevezzük. Így például beszélhetünk arannyal fegyverzett vörös oroszlánról. A növények között gyakori a heraldikai liliom és a heraldikai rózsa. A természeti tárgyak közül a magyar heraldikában nagyon gyakori a (hatágú) csillag és a félhold, valamint viszonylag gyakori a nap is.</p>
 <p>A fekete-fehér ábrákon a színeket általában vonalkázással jelölik:</p>
 
-<img src="vonalkazas.png" id="vonalkazas" alt="Vonalkázás" title="Vonalkázás">
+<img src="IMG/vonalkazas.png" id="vonalkazas" alt="Vonalkázás" title="Vonalkázás">
 
 
 </body>
