--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
             </div>
     </div>
 
-</div>
+    <div class="card">
+        <div class="img-bx" style="--img:url('IMG/teljescimer.png')"></div>
+            <div class="content">
+                    <h2>Heraldika <br><span> - 2025. 02. 25.</span></h2>
+                    <p>Rita nénis feladat, ha érdekel akkor, <a href="cimertan.html" target="_blank">kattints ide!</a></a></p>
+                
+            </div>
+    </div>
 
+</div>
 </body>
 </html>
