--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
             </div>
     </div>
 
+    <div class="card">
+        <div class="img-bx" style="--img:url('IMG/bokor.jpg')"></div>
+            <div class="content">
+                    <h2>Homoktövis <br><span> - 2025. 02. 25.</span></h2>
+                    <p>Rita nénis feladat, ha érdekel akkor, <a href="homoktovis.html" target="_blank">kattints ide!</a></a></p>
+                
+            </div>
+    </div>
+
 </div>
 </body>
 </html>
