--- a/homoktovis.html
+++ b/homoktovis.html
@@ -10,14 +10,14 @@
     
 <h1>Homoktövis</h1>
 <div class="keret" id="bevezeto">
-    <img src="bokor.png" id="bokor" alt="Szüret" title="Szüret">
+    <img src="IMG/bokor.png" id="bokor" alt="Szüret" title="Szüret">
     <p>A homoktövis eredetileg a Himalája lejtőin és főként Ázsiában termő növény, de ma már meghódította az egész világot. Magyarországon is találkozhatunk vele a Duna mentén, a Balaton partján vagy a Csepel-szigeten. Nálunk védett növény.</p>
 </div>
 
 <h2>Egészségügyi hatásai</h2>
 
 <p>A homoktövis széles spektrumon segíti szervezetünk egészségét. Gyógyító hatása akár a meleg, akár a téli időszakban jól jöhet. Legfontosabb egészségügyi hatásai:</p>
-<img src="termes.png" id="termes" alt="Termés" title="Termés">
+<img src="IMG/termes.png" id="termes" alt="Termés" title="Termés">
 <ul>
     <li>védi és erősíti az immunrendszert</li>
     <li>késlelteti az öregedési folyamatot</li>
