--- a/homoktovis.html
+++ b/homoktovis.html
@@ -10,7 +10,7 @@
     
 <h1>Homoktövis</h1>
 <div class="keret" id="bevezeto">
-    <img src="IMG/bokor.png" id="bokor" alt="Szüret" title="Szüret">
+    <img src="IMG/bokor.jpg" id="bokor" alt="Szüret" title="Szüret">
     <p>A homoktövis eredetileg a Himalája lejtőin és főként Ázsiában termő növény, de ma már meghódította az egész világot. Magyarországon is találkozhatunk vele a Duna mentén, a Balaton partján vagy a Csepel-szigeten. Nálunk védett növény.</p>
 </div>
 
